# Cornell-Spider-for-Unix

./: 1  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  SSNlin.xml  area_maxgroup  config.h.in  configure  configure.ac  maxgroup.h  spider.c  spider.conf  spider.spec  spider_config.h  spiderengine-1.0-4.i386.rpm  spiderengine_1.0-5_i386.deb
.deps/: spider.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
